[package]
name = "bench_hash_2023"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"
authors = ["Joshua A. <joshua.auchincloss@proton.me>"]
homepage = ""
documentation = ""
repository = ""
description = ""
readme = "README.md"
license = "MIT"

[features]

[lib]

[dependencies]
seahash = "4.1.0"
paste = "1.0.14"
ahash = "0.8.3"
hashbrown = "0.14"
rustc-hash = "1.1.0"
fnv = "1.0.7"
criterion = { version = "0.4", features = ["html_reports"] }
codspeed-criterion-compat = { version = "2.2.0", features = ["html_reports"]}

[profile.bench]
lto = "fat"

[[bench]]
name = "bench_maps"
harness = false


[[bench]]
name = "bench_sets"
harness = false
